--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body{
     color:#fff;
 
     background:
-        url("https://uploads.onecompiler.io/44dcw5ur7/44dcw5w7r/madao.png") no-repeat top center / contain,
+        url("madao.png") no-repeat top center / contain,
         radial-gradient(circle at top,#1f2933,#020617);
 
     display:flex;
@@ -43,17 +43,15 @@ body{
     gap:16px;
 }
 
-/* ===== WHEEL (RESPONSIVE) ===== */
+/* ===== WHEEL RESPONSIVE ===== */
 .wheel-container{
     position:relative;
-    width: min(80vw, 420px);   /* 🔥 desktop tự to */
-    aspect-ratio: 1 / 1;
+    width:min(70vw, 420px);
+    height:min(70vw, 420px);
     z-index:2;
 }
 
 canvas#wheel{
-    width:100%;
-    height:100%;
     display:block;
 }
 
@@ -61,12 +59,12 @@ canvas#wheel{
 .pointer{
     position:absolute;
     top:50%;
-    right:-8px;
+    right:-10px;
     transform:translateY(-50%) rotate(180deg);
     width:0;height:0;
-    border-top:14px solid transparent;
-    border-bottom:14px solid transparent;
-    border-left:26px solid #fff;
+    border-top:16px solid transparent;
+    border-bottom:16px solid transparent;
+    border-left:30px solid #fff;
 }
 
 /* ===== BUTTON ===== */
@@ -80,7 +78,9 @@ button{
     color:#fff;
     font-weight:700;
 }
-button:active{ transform:scale(.95); }
+button:active{
+    transform:scale(.95);
+}
 
 /* ===== EFFECT CANVAS ===== */
 canvas#fx{
@@ -136,50 +136,71 @@ canvas#fx{
 <script>
 /* ===== AUDIO ===== */
 const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+function playFireSound(){
+    const buffer=audioCtx.createBuffer(1,44100,44100);
+    const data=buffer.getChannelData(0);
+    for(let i=0;i<data.length;i++){
+        data[i]=(Math.random()*2-1)*Math.exp(-i/4000);
+    }
+    const src=audioCtx.createBufferSource();
+    src.buffer=buffer;
+    src.connect(audioCtx.destination);
+    src.start();
+}
 
-/* ===== WHEEL SETUP (DYNAMIC SIZE) ===== */
+/* ===== WHEEL SETUP RESPONSIVE ===== */
 const wheel=document.getElementById("wheel");
 const ctx=wheel.getContext("2d");
+const container=document.querySelector(".wheel-container");
 const dpr=devicePixelRatio||1;
 
+let size, center, radius;
+
 function resizeWheel(){
-    const container=document.querySelector(".wheel-container");
-    const size=container.clientWidth;
-
-    wheel.width=size*dpr;
-    wheel.height=size*dpr;
+    size = container.offsetWidth;
+    wheel.width = size * dpr;
+    wheel.height = size * dpr;
+    wheel.style.width = size+"px";
+    wheel.style.height = size+"px";
     ctx.setTransform(dpr,0,0,dpr,0,0);
-
+    center = size/2;
+    radius = center;
     drawWheel();
 }
-window.addEventListener("resize",resizeWheel);
+window.addEventListener("resize", resizeWheel);
 
 /* ===== DATA ===== */
 const items=[
  {text:"10K",color:"#F59E0B",weight:40},
- {text:"20K",color:"#EF4444",weight:45},
- {text:"50K",color:"#EC4899",weight:10},
- {text:"100K",color:"#22C55E",weight:2},
- {text:"200K",color:"#06B6D4",weight:2},
- {text:"500K",color:"#8B5CF6",weight:1}
+ {text:"20K",color:"#3B82F6",weight:40},
+ {text:"50K",color:"#EC4899",weight:14},
+ {text:"100K",color:"#22C55E",weight:3},
+ {text:"200K",color:"#F97316",weight:2},
+ {text:"500K",color:"#60A5FA",weight:1}
 ];
 
+const slice=2*Math.PI/items.length;
 let angle=0;
 let spinning=false;
 
 /* ===== DRAW ===== */
 function drawWheel(){
-    const size=wheel.width/dpr;
-    const center=size/2;
-    const radius=center;
-    const slice=2*Math.PI/items.length;
-
     ctx.clearRect(0,0,size,size);
 
     ctx.beginPath();
     ctx.arc(center,center,radius,0,Math.PI*2);
     ctx.fillStyle="#facc15";
     ctx.fill();
+
+    for(let i=0;i<28;i++){
+        const a=(Math.PI*2/28)*i;
+        const x=center+Math.cos(a)*(radius-8);
+        const y=center+Math.sin(a)*(radius-8);
+        ctx.beginPath();
+        ctx.arc(x,y,4,0,Math.PI*2);
+        ctx.fillStyle=i%2?"#fff":"#fde68a";
+        ctx.fill();
+    }
 
     items.forEach((it,i)=>{
         const a=angle+i*slice;
@@ -193,18 +214,29 @@ function drawWheel(){
         ctx.translate(center,center);
         ctx.rotate(a+slice/2);
         ctx.fillStyle="#fff";
-        ctx.font="bold 18px system-ui";
+        ctx.font="bold 20px system-ui";
         ctx.textAlign="right";
         ctx.textBaseline="middle";
+        ctx.shadowColor="rgba(0,0,0,.5)";
+        ctx.shadowBlur=4;
         ctx.fillText(it.text,radius-40,0);
         ctx.restore();
     });
+
+    ctx.beginPath();
+    ctx.arc(center,center,36,0,Math.PI*2);
+    ctx.fillStyle="#dc2626";
+    ctx.fill();
+    ctx.beginPath();
+    ctx.arc(center,center,30,0,Math.PI*2);
+    ctx.fillStyle="#ef4444";
+    ctx.fill();
 }
 
-/* ===== LOGIC ===== */
+/* ===== SPIN ===== */
 function pickIndex(){
-    let total=items.reduce((s,i)=>s+i.weight,0);
-    let r=Math.random()*total;
+    let t=items.reduce((s,i)=>s+i.weight,0);
+    let r=Math.random()*t;
     for(let i=0;i<items.length;i++){
         r-=items[i].weight;
         if(r<=0) return i;
@@ -215,9 +247,9 @@ function pickIndex(){
 function spin(){
     if(spinning) return;
     spinning=true;
+    audioCtx.resume();
 
     const idx=pickIndex();
-    const slice=2*Math.PI/items.length;
     const start=angle;
     const end=6*Math.PI*2-(slice*idx+slice/2);
     let t0=null;
@@ -227,23 +259,68 @@ function spin(){
         const p=Math.min((t-t0)/6000,1);
         angle=start+(end-start)*(1-Math.pow(1-p,3));
         drawWheel();
+        spawnLucky();
         if(p<1) requestAnimationFrame(anim);
         else{
             spinning=false;
-            document.getElementById("result").innerText=
-              "🎉 Bạn được lì xì: "+items[idx].text;
-            document.getElementById("popup").classList.add("show");
+            result.innerText="🎉 Bạn được lì xì: "+items[idx].text;
+            popup.classList.add("show");
         }
     }
     requestAnimationFrame(anim);
 }
 
 function closePopup(){
-    document.getElementById("popup").classList.remove("show");
+    popup.classList.remove("show");
+}
+
+/* ===== FX ===== */
+const fx=document.getElementById("fx");
+const fctx=fx.getContext("2d");
+fx.width=innerWidth; fx.height=innerHeight;
+addEventListener("resize",()=>{fx.width=innerWidth;fx.height=innerHeight;});
+
+const petals=[],fireworks=[],lucky=[];
+
+function spawnPetal(){
+    petals.push({
+        x:Math.random()*fx.width,y:-20,
+        vx:Math.random()-0.5,vy:Math.random()*2+2,
+        r:Math.random()*Math.PI,
+        icon:Math.random()>0.5?"🌸":"🌼"
+    });
+}
+function spawnLucky(){
+    lucky.push({
+        x:fx.width/2,y:fx.height-280,
+        vx:(Math.random()-0.5)*6,vy:(Math.random()-1)*6,life:60
+    });
+}
+
+function animateFX(){
+    fctx.clearRect(0,0,fx.width,fx.height);
+    if(Math.random()<0.12) spawnPetal();
+
+    petals.forEach((p,i)=>{
+        p.x+=p.vx; p.y+=p.vy; p.r+=0.01;
+        fctx.save();
+        fctx.translate(p.x,p.y); fctx.rotate(p.r);
+        fctx.font="22px serif"; fctx.fillText(p.icon,0,0);
+        fctx.restore();
+        if(p.y>fx.height) petals.splice(i,1);
+    });
+
+    lucky.forEach((l,i)=>{
+        l.x+=l.vx; l.y+=l.vy; l.life--;
+        fctx.font="24px serif";
+        fctx.fillText("🧧",l.x,l.y);
+        if(l.life<=0) lucky.splice(i,1);
+    });
+    requestAnimationFrame(animateFX);
 }
 
 resizeWheel();
+animateFX();
 </script>
-
 </body>
 </html>
